# ppack

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
config/: ppack_version.h.in
include/: ppack.h  ppack_platform.h
src/: ppack.c
tests/: meson.build  test_edge.c  test_exhaustive.c  test_fixtures.h  test_fuzz.c  test_fuzz.h  test_fuzz_cases.c  test_harness.c  test_harness.h  test_layout.c  test_null_args.c  test_partial_coverage.c  test_patterns.c  test_payload_size.c  test_ppack.c  test_ppack_main.c  test_roundtrip_raw.c  test_scale_zero.c  test_scaled.c  test_sign_extension.c  test_u8_shim.c  test_uint8_shim.c  test_validation.c  test_wire_lockdown.c
